# aiosm

./: .gitignore  README.md  makefile  pyproject.toml
aiosm/: __init__.py  __main__.py  clinet.py  coms.py  dprint.py  host.py  node.py  radio.py  responder.py
tests/: coms_test.py
