[tool.poetry]
name = "aiosm"
version = "0.0.0"
description = "Asyncronus socket manager for using asyncio with RPC capabilities."
authors = ["Callum B-C <callum@fish.cat>"]
license = "MIT"
readme = 'README.md'
repository = "https://github.com/C-Bookie/aiosm"
keywords = ['async', 'asyncio', 'socket', 'rpc']

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[tool.poetry.scripts]
asynccom = 'aiosm:run'
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

