[tool.poetry]
name = "aiosm"
version = "0.0.2"
description = "Asynchronous socket manager for using asyncio with RPC capabilities."
authors = ["Callum B-C <callum@fish.cat>"]
license = "MIT"
readme = 'README.md'
repository = "https://github.com/C-Bookie/aiosm"
keywords = ['async', 'asyncio', 'socket', 'rpc']

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[tool.poetry.scripts]
asynccom = 'aiosm:run_host'
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

