[build-system]
requires = ["flit_core >=3.6.0,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "aiosm"
authors = [
    {name = "Callum B-C", email = "callum@fish.cat"},
]
dependencies = [
]
requires-python = ">=3.8"
readme = "README.md"
classifiers = ["Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dynamic = ['version', 'description']

[project.optional-dependencies]
test = [
	"pytest",
	"pytest-cov",
]
doc = [
	"sphinx",
]

[project.urls]
Source = "https://github.com/C-Bookie/aiosm"

[project.scripts]
aiosm-host = "aiosm:__main__.run_host"
